--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,7 +9,7 @@ if (NOT GMOCK_FOUND)
 endif()
 
 set(SRC "${CMAKE_SOURCE_DIR}/src/dk_utils")
-include_directories(${SRC}
+include_directories(
     SYSTEM ${GTEST_INCLUDE_DIRS}
     SYSTEM ${GMOCK_INCLUDE_DIRS}
 )
@@ -19,16 +19,25 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \
     -Wno-missing-prototypes"
 )
 
-function(add_gtest name sources)
+function(add_gtest name sources inc libs)
     add_executable(${name} ${sources})
     add_dependencies(${name} googletest)
     target_link_libraries(${name}
+        ${libs}
         ${GMOCK_MAIN_LIBRARY}
         ${GMOCK_LIBRARY}
         ${CMAKE_THREAD_LIBS_INIT}
     )
     add_test(AllTests ${name})
+    target_include_directories(${name} PRIVATE ${inc})
 endfunction()
 
-add_gtest(test_exception "test_exception.cpp;${SRC}/exceptions.cpp")
-add_gtest(test_logger "test_logger.cpp;${SRC}/logger.cpp")
+add_gtest(test_exception "test_exception.cpp;${SRC}/exceptions.cpp" ${SRC} "")
+add_gtest(test_logger "test_logger.cpp;${SRC}/logger.cpp" ${SRC} "")
+
+if (ENABLE_DK_OPENGL)
+    set(SRC "${CMAKE_SOURCE_DIR}/src/dk_opengl")
+    set(INC ${SRC} ${EGL_INCLUDE_DIRS})
+    set(LINK ${EGL_LIBRARIES})
+    add_gtest(test_eglwrapper "test_eglwrapper.cpp;${SRC}/eglwrapper.cpp" "${INC}" ${LINK})
+endif()
