--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,16 +8,18 @@ if (NOT GMOCK_FOUND)
     find_package(GMock REQUIRED)
 endif()
 
-set(SRC "${CMAKE_SOURCE_DIR}/src/dk_utils")
+set(SRC "${CMAKE_CURRENT_SOURCE_DIR}/../src/dk_utils")
 include_directories(
+    ${DK_UTILS_INCLUDE_DIRS}
     SYSTEM ${GTEST_INCLUDE_DIRS}
     SYSTEM ${GMOCK_INCLUDE_DIRS}
 )
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \
-    -Wno-global-constructors \
-    -Wno-missing-prototypes"
-)
+if(${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \
+        -Wno-global-constructors \
+        -Wno-missing-prototypes"
+    )
+endif()
 
 function(add_gtest name sources inc libs)
     add_executable(${name} ${sources})
@@ -36,7 +38,7 @@ add_gtest(test_exception "test_exception.cpp;${SRC}/exceptions.cpp" ${SRC} "")
 add_gtest(test_logger "test_logger.cpp;${SRC}/logger.cpp" ${SRC} "")
 
 if (ENABLE_DK_OPENGL)
-    set(SRC "${CMAKE_SOURCE_DIR}/src/dk_opengl")
+    set(SRC "${CMAKE_CURRENT_SOURCE_DIR}/../src/dk_opengl")
     set(INC ${SRC} ${EGL_INCLUDE_DIRS})
     set(LINK ${EGL_LIBRARIES})
     add_gtest(test_eglwrapper "test_eglwrapper.cpp;${SRC}/eglwrapper.cpp" "${INC}" ${LINK})
