--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
-project(dk_utils)
+cmake_policy(SET CMP0048 NEW)
+project(dk_utils VERSION 0.1)
 cmake_minimum_required(VERSION 3.2.1)
 
 # set build type to debug as it is in development phase
