Modify build system
Integrated Find*.cmake from bbb_test project, add dk_utils-config.cmake

Signed-off-by: Dariusz Kluska <darkenk@gmail.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,6 +16,6 @@ endif()
 if (ENABLE_DK_X11)
     set(SRC "${CMAKE_CURRENT_SOURCE_DIR}/../src/dk_opengl")
     set(INC ${SRC}/../ ${XCB_INCLUDE_DIRS})
-    set(LINK "${XCB_LIBRARIES};${OPENGLES2_LIBRARY};${EGL_LIBRARIES}")
+    set(LINK "${XCB_LIBRARIES};${GLESv2_LIBRARIES};${EGL_LIBRARIES}")
     add_gtest(test_windowx11 "test_windowx11.cpp;${SRC}/windowx11.cpp;${SRC}/eglwrapper.cpp" "${INC}" "${LINK}")
 endif()
