--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_policy(SET CMP0048 NEW)
-project(dk_utils VERSION 0.1)
+cmake_policy(SET CMP0048 OLD)
+project(dk_utils)
 cmake_minimum_required(VERSION 3.2.1)
 
 # set build type to debug as it is in development phase
@@ -15,14 +15,14 @@ endif()
 
 include(cmake/compiler_flags.cmake)
 find_package(ECM 1.0.0 REQUIRED NO_MODULE)
-set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules/;${ECM_MODULE_PATH};\
-    ${CMAKE_MODULE_PATH}")
-
-message(${CMAKE_MODULE_PATH})
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
+    ${CMAKE_CURRENT_LIST_DIR}/cmake/modules/
+    ${ECM_MODULE_PATH}
+)
 
 find_package(EGL)
-find_package(OpenGLES2)
-if (EGL_FOUND)
+find_package(GLESv2)
+if (EGL_FOUND AND GLESV2_FOUND)
     set(ENABLE_DK_OPENGL "true")
 endif()
 
